add section my skills

--- a/index.html
+++ b/index.html
@@ -99,22 +99,22 @@
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <a class="skills__link" href="#contact">Contact Me</a>
         </div>
-        <div class=>
-            <div>Photoshop</div>
+        <div class=skills__progress>
+            <h3>Photoshop</h3>
             <div class="progress">
-                <span>%</span>
+                <span class="progress__big">90%</span>
             </div>
-            <div>Illustrator</div>
+            <h3>Illustrator</h3>
             <div class="progress">
-                <span>%</span>
+                <span class="progress__middle">80%</span>
             </div>
-            <div>Html/css</div>
+            <h3>Html/css</h3>
             <div class="progress">
-                <span>%</span>
+                <span class="progress__big">90%</span>
             </div>
-            <div>php/mysql</div>
+            <h3>php/mysql</h3>
             <div class="progress">
-                <span>%</span>
+                <span class="progress__low">70%</span>
             </div>
         </div>
 
