--- a/index.html
+++ b/index.html
@@ -119,10 +119,29 @@
         </div>
 
     </section>
-    <section class="resume">
+    <section class="resume container">
         <h2>Resume</h2>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias error ullam, laudantium repellat sapiente, in incidunt necessitatibus rem sint quos saepe cumque culpa tenetur nisi voluptatum voluptate, est inventore obcaecati! </p>
-        <a href=""download></a>
+        <a class="resume__link" href="#" download>Download Resume</a>
+    </section>
+
+    <section class="education">
+        <div class="education__description">
+            <h2>My Education</h2>
+            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
+            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
+        </div>
+        <div>
+            <div>
+                <div>
+                    <h3>Graphic Design Diploma</h3>
+                    <p>Reeves College  /  June 2008 - May 2010</p>
+                    <div>4.0 GPA</div>
+                </div>
+            </div>
+            <div></div>
+        </div>
+
     </section>
 </body>
 </html>
