--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic,latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
 </head>
 <body>
     <section class="section__main">
@@ -35,6 +38,10 @@
                     <li><a href="#" class="nav__menu-item">Portfolio</a></li>
                     <li><a href="#" class="nav__menu-item">Contact me</a></li>
                 </ul>
+            </nav>
+            <nav class="mob__menu">
+                <i class="fas fa-bars"></i>
+
             </nav>
     </header>
     <section class="section__advantages container">
@@ -143,5 +150,28 @@
         </div>
 
     </section>
+    <section class="reviews">
+        <div class="reviews__carousel">
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem enim incidunt temporibus magnam animi est. Quisquam nisi autem laudantium. Velit consectetur animi ab ut numquam quibusdam delectus consequatur nostrum exercitationem.</p>
+                <h3>Joun Stone</h3>
+            </div>
+            <div> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem enim incidunt temporibus magnam animi est. Quisquam nisi autem laudantium. Velit consectetur animi ab ut numquam quibusdam delectus consequatur nostrum exercitationem.</p>
+                <h3>Joun Stone</h3>
+            </div>
+            <div> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem enim incidunt temporibus magnam animi est. Quisquam nisi autem laudantium. Velit consectetur animi ab ut numquam quibusdam delectus consequatur nostrum exercitationem.</p>
+                <h3>Joun Stone</h3>
+            </div>
+          </div>
+
+    </section>
+
+
+    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script> -->
 </body>
 </html>
