add my education

--- a/index.html
+++ b/index.html
@@ -132,21 +132,33 @@
         <a class="resume__link" href="#" download>Download Resume</a>
     </section>
 
-    <section class="education">
+    <section class="education container">
         <div class="education__description">
             <h2>My Education</h2>
             <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
             <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
         </div>
-        <div>
+        <div сlass="education__experience">
             <div>
-                <div>
+                <div class="education__experience-title">
                     <h3>Graphic Design Diploma</h3>
                     <p>Reeves College  /  June 2008 - May 2010</p>
-                    <div>4.0 GPA</div>
+                    <div class="education__experience-gpa">4.0 GPA</div>
                 </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio aliquam molestias fugiat qui. Id, laudantium. Maxime quod possimus, et nemo assumenda eaque quos sapiente repellendus quidem illum facere explicabo odio!
+                </p>
             </div>
-            <div></div>
+            <div>
+                <div class="education__experience-title">
+                    <h3>CIT Diploma</h3>
+                    <p>Lethbridge College  /  June 2006 - May 2008</p>
+                    <div class="education__experience-gpa">4.0 GPA</div>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.                </p>
+            </div>
+
         </div>
 
     </section>
