--- a/index.html
+++ b/index.html
@@ -133,34 +133,72 @@
     </section>
 
     <section class="education container">
-        <div class="education__description">
-            <h2>My Education</h2>
-            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
-            <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
-        </div>
-        <div сlass="education__experience">
-            <div>
-                <div class="education__experience-title">
-                    <h3>Graphic Design Diploma</h3>
-                    <p>Reeves College  /  June 2008 - May 2010</p>
-                    <div class="education__experience-gpa">4.0 GPA</div>
-                </div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio aliquam molestias fugiat qui. Id, laudantium. Maxime quod possimus, et nemo assumenda eaque quos sapiente repellendus quidem illum facere explicabo odio!
-                </p>
+        <div class="education__section">
+            <div class="education__description">
+                <h2>My Education</h2>
+                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
+                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
             </div>
-            <div>
-                <div class="education__experience-title">
-                    <h3>CIT Diploma</h3>
-                    <p>Lethbridge College  /  June 2006 - May 2008</p>
-                    <div class="education__experience-gpa">4.0 GPA</div>
+            <div class="education__experience">
+                <div>
+                    <div class="education__experience-title">
+                        <h3>Graphic Design Diploma</h3>
+                        <p>Reeves College  /  June 2008 - May 2010</p>
+                        <div class="education__experience-gpa">4.0 GPA</div>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio aliquam molestias fugiat qui. Id, laudantium. Maxime quod possimus, et nemo assumenda eaque quos sapiente repellendus quidem illum facere explicabo odio!
+                    </p>
                 </div>
-                <p>
-                    Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.                </p>
+                <div>
+                    <div class="education__experience-title">
+                        <h3>CIT Diploma</h3>
+                        <p>Lethbridge College  /  June 2006 - May 2008</p>
+                        <div class="education__experience-gpa">4.0 GPA</div>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.                </p>
+                </div>
             </div>
-
         </div>
+        <div class="education__section">
+            <div class="education__description">
+                <h2>Work experience</h2>
+                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
+                <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est.</p>
+            </div>
+            <div class="education__experience">
+                <div>
+                    <div class="education__experience-title">
+                        <h3>Lead WEb Designer   </h3>
+                        <p>ABC Company, Saskatoon  /  June 2011 - Present</p>
+                        <div class="education__experience-gpa">3 Years</div>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio aliquam molestias fugiat qui. Id, laudantium. Maxime quod possimus, et nemo assumenda eaque quos sapiente repellendus quidem illum facere explicabo odio!
+                    </p>
+                </div>
+                <div>
+                    <div class="education__experience-title">
+                        <h3>Junior Designer</h3>
+                        <p>XYZ Company, Lethbridge  /  June 2008 - May 2009</p>
+                        <div class="education__experience-gpa">1 Years</div>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.                </p>
+                </div>
+                <div>
+                    <div class="education__experience-title">
+                        <h3>Web Developer</h3>
+                        <p>The Company, Lethbridge  /  June 2007 - May 2008</p>
+                        <div class="education__experience-gpa">1 Years</div>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei.                </p>
+                </div>
 
+            </div>
+        </div>
     </section>
     <section class="reviews">
         <div class="reviews__carousel">
