--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic,latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
 </head>
@@ -41,7 +41,6 @@
             </nav>
             <nav class="mob__menu">
                 <i class="fas fa-bars"></i>
-
             </nav>
     </header>
     <section class="section__advantages container">
@@ -217,7 +216,65 @@
           </div>
 
     </section>
+    <section class="portfolio">
+        <h2>Portfolio</h2>
+        <p>Lorem ipsum dolor sit amet, ea doming epicuri iudicabit nam, te usu virtute placerat. Purto brute disputando cu est, eam dicam soluta ei. Vel dicam vivendo accusata ei, cum ne periculis molestiae pri. </p>
+        <div>
+            <div>
+                <h3> Filter by category</h3>
+                <ul>
+                    <li><a href="#">All</a> </li>
+                    <li><a href="#">Themes</a> </li>
+                    <li><a href="#">Icons</a> </li>
+                    <li><a href="#">Patterns</a> </li>
+                    <li><a href="#">Mockups</a> </li>
+                    <li><a href="#">UI Kits</a> </li>
+                </ul>
+            </div>
+            <a class="portfolio__item">
+                <img src="img/port1.png" alt="portfolio">
+            </a>
+            <a class="portfolio__item">
+                <img src="img/port2.png" alt="portfolio">
+            </a>
+            <a class="portfolio__item">
+                <img src="img/port3.png" alt="portfolio">
+            </a>
+            <a class="portfolio__item">
+                <img src="img/port4.png" alt="portfolio">
+            </a>
+            <a class="portfolio__item">
+                <img src="img/port5.png" alt="portfolio">
+            </a>
+            <a class="portfolio__item">
+                <img src="img/port6.png" alt="portfolio">
+            </a>
+            <a class="portfolio__item">
+                <img src="img/port7.png" alt="portfolio">
+            </a>
+            <a class="portfolio__item">
+                <img src="img/port8.png" alt="portfolio">
+            </a>
+        </div>
+        
+    
+    </section>
 
+
+
+
+    <footer class="footer">
+        <h3>Copyright 2014 Focal - Built With Passion</h3>
+        <div class="footer__social">
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+        </div>
+
+    </footer>
 
     <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
